# cmake-example-with-static-analysis

./: CMakeLists.txt  README.md  make_with_clang_static_analysis.sh  use_clang.sh
src/: hello.c
